hra/patternlab/site/sass/molecules/_site-header.scss
/*------------------------------------*\
    $SITE HEADER
\*------------------------------------*/

.site-header {
    position: relative;
    z-index: $z-zeta;
    width: 100%;
    padding: 20px 5%;
    background-color: rgba(255, 255, 255, 0.98);

    @include media-query(desktop) {
        padding: 20px;
    }

    @include media-query(laptop) {
        height: 100px;
        background-color: #fff;
    }

    @include media-query(mobile) {
        height: 64px;
        padding: 0;
    }

    &__logo {
        display: inline-block;

        > span {
            @include hidden;
        }

        @include media-query(mobile) {
            margin: 17px 0 0 15px;

            svg {
                width: 100px;
                height: 43px;
            }
        }
    }

    &__right {
        margin-top: 7px;
        text-align: right;

        @include media-query(mobile) {
            margin-top: 0;
        }
    }

    &__search {
        @include placeholder-text {
            @include font-size(zeta);
            font-family: $font--primary;
            color: #fff;
            opacity: 1;
        }

        display: inline-block;
        padding: 11px 20px;
        margin: 0 0 0 70px;
        color: #fff;
        vertical-align: -16px;
        background-color: $color--blue;
        border: 0;
        border-radius: 35px;

        @include media-query(desktop) {
            margin-left: 30px;
        }

        @include media-query(laptop) {
            margin-left: 0;
        }

        @include media-query(mobile) {
            width: 100%;
            padding: 20px;
            vertical-align: top;
            border-radius: 0;
        }
    }

    &__search-label {
        @include hidden;
    }

    &__menu-trigger-container {
        display: none;

        @include media-query(laptop) {
            display: inline-block;
            text-align: right;
            vertical-align: -30px;
        }
    }

    &__menu-trigger {
        @include font-size(milli);
        position: relative;
        z-index: $z-epsilon;
        padding-top: 20px;
        font-family: $font--secondary;
        color: $color--primary;
        text-transform: uppercase;
        cursor: pointer;
        background: transparent;
        border: 0;

        &:focus {
            outline: 0;
        }
    }
}

